src/snapshots/afrotd__parser__tests__rule_9.1.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 8
title: Helm und Helmgitter-Fouls
text: "\ta) Kein Spieler darf den Helm eines Gegners (inklusive Helmgitter), dessen Gesicht oder dessen Hals mit Hand (Händen) oder Arm(en) fortwährend berühren (Ausnahme: durch oder gegen den Runner) [S26].\n\tb) Kein Spieler darf das Helmgitter, den Kinnriemen oder in eine andere Helmöffnung eines Gegners greifen und diese dann verdrehen oder daran ziehen. Es ist kein Foul, wenn das Helmgitter, der Kinnriemen oder die Helmöffnung nur ergriffen, anschließend aber nicht verdreht oder daran gezogen wird. Im Zweifel ist es ein Foul."
interpretations: []
