src/snapshots/afrotd__parser__tests__rule_9.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 4
title: Kontakt mit einem Schiedsrichter
text: "Während des Spieles dürfen Personen, die den Regeln unterliegen (Regel 1.1.6), keinen Schiedsrichter absichtlich in grober Weise berühren. Strafe: Unsportliches Verhalten. Wird als Dead Ball Foul durchgeführt. 15 Meter vom Succeeding Spot und automatische Disqualifikation. Automatisch First Down für Team B-Fouls, soweit das nicht in Konflikt zu anderen Regeln steht [S7, S27 und S47]."
interpretations: []
