src/snapshots/afrotd__parser__tests__rule_9.2.7.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 7
title: Tabakkonsum
text: "In der Zeit vom Aufruf der Team Captains zum Coin Toss bis der Referee das Spiel für beendet erklärt, ist es Spielern, Teammitgliedern und anderem Personal (z. B. Coaches, Physiotherapeuten, Spieloffiziellen und Schiedsrichtern) auf dem Platz verboten, Tabakprodukte zu konsumieren. Nikotinhaltige (E-)Produkte sind Tabakerzeugnissen gleichzusetzen. Strafe: Disqualifikation. Dead Ball Foul, 15 Meter vom Succeeding Spot [S27 und S47]."
interpretations: []
