src/snapshots/afrotd__parser__tests__rule_9.3.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 1
title: Wer darf blocken
text: "Spieler jedes Teams dürfen gegnerische Spieler blocken, vorausgesetzt, es handelt sich nicht um Passbehinderung, die Behinderung beim Fangen eines Kicks oder ein persönliches Foul (Ausnahme: Regel 6.1.12 und 6.5.4)."
interpretations: []
